@@ -1,3 +1,8 @@
+2000-02-02  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
+
+	* lib/parser-smi.y: Juergen added checks for illegally imported
+	SMI types and ASN.1 type definitions instead of TCs in SMIv2.
+
 2000-01-28  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
 
 	* lib/parser-smi.y: Juergen added special handling for the
